# adam-scriveyn

./: .gitignore  Character Classification -- Data Creation.ipynb  ImageCropper.ipynb  OCRTranscriber.ipynb  PageDetection.ipynb  README.md  WordClassificationDM.ipynb  pyproject.toml  requirements.txt
docs/: ImagePreProcessor-notes.md  ImageProcessor-notes.md  TODO.md
documentation/: ImagePreProcessor-notes.md  general-development-notes.md  imagePreProcessor-notes.md
lib/: ImageProcessor.py
notebook_ui/: imageProcessorForm.py
ocr/: ImagePreProcessor.py  charSeg.py  helpers.py  ndl_crop.py  page.py  tfhelpers.py  words.py
src/adam_scriveyn/: adam_scriveyn.py
src/adam_scriveyn/commands/: preprocess.py
tests/: TestSuite.py
tests/lib/: TestImageProcessor.py
tests/transcriber/: TestImagePreProcessor.py
transcriber/: ImagePreProcessor.py  imagePreProcessor.py
