[project]
name = "adam-scriveyn"
version = "0.0.1"
description = ""
authors = [
    {name = "William Bolton", email = "wbolton@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "adam_scriveyn", from = "src"}]

[tool.poetry.scripts]
adam-scriveyn = "adam_scriveyn.adam_scriveyn:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
